--- a/index.html
+++ b/index.html
@@ -323,6 +323,10 @@
           scrollbar-width: none; /* Firefox */
           -ms-overflow-style: none; /* Edge */
           scroll-snap-type: x proximity;
+          user-select: none;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
         }
 
         .mobile-tabs::-webkit-scrollbar {
